@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: June 18, 2009</p>
+      <p>Last Updated: June 20, 2009</p>
     </td>
   </tr>
 </table>
@@ -1481,6 +1481,8 @@ nuttx-0.4.9 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  derives from http://xflat.sourceforge.net.  At present is supports on
 	  XIP execution from ROMFS file systems.  Initial check-in is untested
 	  and probably breaks many builds.
+	* examples/lib: Added qsort()
+	* examples/nxflat: Added support for symbol tables
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
